Feedback menuItem sends an email to battuta@iti.com Google Places API now works!! Google Navigation works too!! Haba2 agarab fel DB .. msh metamen :/

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="title">Title</string>
     <string name="start">Start</string>
     <string name="end">End</string>
+    <string name="save_trip">Save Trip</string>
+    <string name="start_trip">Start Trip</string>
 </resources>
