--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,7 +1,22 @@
 <resources>
+
     <string name="app_name">Battuta</string>
 
+    <!-- Splash Activity -->
+
+    <array name="quotesArray">
+        <item>The world is a book, and those who do not travel read only a page.</item>
+        <item>Wherever you go, go with all your heart.</item>
+        <item>Every day is a journey, and the journey itself is home.</item>
+        <item>A good traveler has no fixed plans, and is not intent on arriving.</item>
+        <item>The journey of a thousand miles begins with a single step.</item>
+        <item>The real voyage of discovery consists not in seeking new landscapes, but in having new eyes.</item>
+        <item>read; I travel; I become</item>
+        <item>Travel brings power and love back into your life.</item>
+    </array>
+
     <!-- Strings related to login -->
+
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -13,16 +28,13 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_login">Welcome</string>
+
+
+    <!-- Strings related to Main Activity -->
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
-
-    <string name="title_activity_splash">SplashActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="action_feedback">Feedback</string>
 
     <string name="about_title">About</string>
     <string name="about_contents">This App was developed for the ITI - Android Development Nano program</string>
@@ -38,7 +50,19 @@
     <string name="logout">Logout</string>
     <string name="fatma_ali">Fatma Ali</string>
     <string name="it_was_developed_by">It was developed by:</string>
+
+
+    <!-- Strings related to Trip Edit/Info Activity -->
+
     <string name="title">Title</string>
-    <string name="start">Start</string>
-    <string name="end">End</string>
+    <string name="start">Starting Location</string>
+    <string name="end">Destination</string>
+    <string name="trip_dateTime">Date and Time</string>
+    <string name="roundTrip">Round Trip</string>
+    <string name="notes">Notes</string>
+    <string name="save_trip">Save Trip</string>
+    <string name="start_trip">Start Trip</string>
+    <string name="edit_trip">Edit Trip</string>
+
+
 </resources>
