--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,8 @@
     <string name="languages">Languages</string>
     <string name="logout">Logout</string>
 
+    <string name="snackbar_trip_added">A new trip has been added!</string>
+    <string name="snackbar_trip_deleted">Trip deleted!</string>
 
     <!-- About Dialog -->
 
