--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
 
     <string name="trips">Trips</string>
     <string name="upcoming">Upcoming</string>
+    <string name="done">Done</string>
     <string name="passed">Passed</string>
     <string name="settings">Settings</string>
     <string name="sync">Sync</string>
