--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,12 +36,12 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_feedback">Feedback</string>
+    <string name="action_feedback">Send Feedback</string>
 
     <string name="trips">Trips</string>
-    <string name="upcoming">Upcoming</string>
+    <string name="upcoming">Upcoming Trips</string>
     <string name="done">Done</string>
-    <string name="passed">Passed</string>
+    <string name="passed">Passed Trips</string>
     <string name="settings">Settings</string>
     <string name="sync">Sync</string>
     <string name="share">Share</string>
