--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,5 @@
     <string name="remind_later">Later</string>
     <string name="remind_dismiss">Dismiss</string>
     <string name="upcoming_trip">Upcoming Trip</string>
-    <string name="title_activity_signup">SignupActivity</string>
+    <string name="title_activity_signup">Sign Up</string>
 </resources>
